added destination images

--- a/destination.html
+++ b/destination.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--1 owl-carousel-css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+        integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- 2 owl-carousel-theme -->
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+        integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="app.css">
     <title>Destination</title>
 </head>
@@ -21,20 +30,138 @@
         <div class="collapse navbar-collapse" id="expandme">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">ABOUT</a>
+                    <a href="index.html" class="nav-link">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a href="About.html" class="nav-link">ABOUT</a>
                 </li>
                 <li class="nav-item">
                     <a href="destination.html" class="nav-link">DESTINATION</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">CONTACT</a>
+                    <a href="Booking.html" class="nav-link">BOOKING</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">CONTACT</a>
                 </li>
             </ul>
         </div>
     </nav>
 
 
-    <h2 class="text-center pt-5">TOUR DESTINATION</h2>
+
+    <section class="bgimg py-5">
+        <div class="container-fuild my-5">
+            <h1 class="text-center text-dark fw-bold display-4">OUR DESTINATION'S</h1>
+            <div class="row mt-2">
+                <div class="owl-carousel owl-theme">
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/1-Deosai.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Deosai</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/2-Fairy-Meadows.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Fairy meadows</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/3-Hingol-National-Park.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Hingol-National-Park</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/4-Hunza-Valley.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Hunza Valley</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/5-kalashvalley.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Kalash valley</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/6-KatpanaCold-Desert.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Katpana Cold-Desert</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/7-Khunjerab-Pass.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Khunjerab Pass</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/8-Margala-Hills.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Margala hills</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/9-Naltar-Valley-lake.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Naltar Valley</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/10-Passu-Cones.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Passu Cones</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/11-Rohtas-Fort.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Rohtas Fort</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="item mb-4">
+                        <div class="card border-0 shadow">
+                            <img src="img/12-Phander-Lake.jpg" alt="image" class="card-img-top">
+                            <div class="card-body">
+                                <h4 class="text-dark ">Phander-Lake</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+    <!-- <h2 class="text-center text-dark py-5">TOUR DESTINATION</h2>
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
@@ -75,7 +202,7 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
-    </div>
+    </div> -->
 
 
 
@@ -84,8 +211,8 @@
 
 
     <div class="footer ">
-        <div class="container row pl-5 pr-5 m-auto pt-5 justify-content-center">
-            <div class="col-4 mt-3">
+        <div class="container row pl-5 pr-5 m-auto pt-5 pb-5">
+            <div class="col-md-4 mt-3">
                 <h3 class="text-light">Vacation</h3>
                 <h4 class="my-4">Far far away, behind the <br> word mountains, far <br> from the countries Vokalia <br>
                     and
@@ -97,7 +224,7 @@
                     <img class="pl-2" src="img/icons8-instagram-51.png" alt="">
                 </div>
             </div>
-            <div class="col-4 mt-3">
+            <div class="col-md-4 mt-3">
                 <h3 class="text-light">Infromation</h3>
                 <h4 class="mt-4">Online Enquiry</h4>
                 <h4 class="mt-4">General Enquiries</h4>
@@ -106,7 +233,7 @@
                 <h4 class="mt-4">Refund Policy</h4>
                 <h4 class="mt-4">Call Us</h4>
             </div>
-            <div class="col-4 mt-3 ">
+            <div class="col-md-4 mt-3 ">
                 <h3 class="text-light">Have a Questions?</h3>
                 <h4 class=" mt-4 "> <img src="img/icons8-location-24.png" alt=""> st. #5 iqbal road
                     Abbottabad, Pakistan</h4>
@@ -141,6 +268,40 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
         integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
         crossorigin="anonymous"></script>
+
+    <!-- jquery cdn -->
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+
+
+    <!-- cdn files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+        integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- init owl carousel -->
+
+    <script>
+        $('.owl-carousel').owlCarousel({
+            loop: true,
+            margin: 10,
+            nav: true,
+            responsive: {
+                0: {
+                    items: 1
+                },
+                600: {
+                    items: 3
+                },
+                1000: {
+                    items: 4
+                }
+            }
+        })
+    </script>
 </body>
 
 </html>
