--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
         <div class="collapse navbar-collapse" id="expandme">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a href="index.html" class="nav-link">ABOUT</a>
+                    <a href="index.html" class="nav-link">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a href="About.html" class="nav-link">ABOUT</a>
                 </li>
                 <li class="nav-item">
                     <a href="destination.html" class="nav-link">DESTINATION</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">CONTACT</a>
+                    <a href="Booking.html" class="nav-link">BOOKING</a>
+                </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">CONTACT</a>
                 </li>
             </ul>
         </div>
@@ -41,7 +47,9 @@
                 <div class="text-center">
                     <h1 class="headingtext text-center display-2 text-light">Make Your Tours <br> Amazing With Us
                     </h1>
-                    <button class="btn btn-outline-warning rounded-pill btn-lg">Get started</button>
+                    <button class="btn btn-outline-warning rounded-pill btn-lg">
+                        <a class="text-light" style="text-decoration: none;" href="Booking.html">Get started</a>
+                    </button>
                 </div>
             </div>
         </section>
@@ -87,7 +95,9 @@
                     language ocean. A small river named Duden flows by their place and supplies it with the necessary
                     regelialia.
                 </p>
-                <button class="btn btn-warning rounded-pill text-light btn-lg shadow">Search Destination</button>
+                <button class="btn btn-warning rounded-pill text-light btn-lg shadow mb-5">
+                    <a href="destination.html" class="text-dark" style="text-decoration: none;">Search Destination</a>
+                </button>
             </div>
         </div>
     </div>
@@ -158,8 +168,8 @@
 
 
     <div class="footer ">
-        <div class="container row pl-5 pr-5 m-auto pt-5">
-            <div class="col-4 mt-3">
+        <div class="container row pl-5 pr-5 m-auto pt-5 pb-5">
+            <div class="col-md-4 mt-3">
                 <h3 class="text-light">Vacation</h3>
                 <h4 class="my-4">Far far away, behind the <br> word mountains, far <br> from the countries Vokalia <br>
                     and
@@ -171,7 +181,7 @@
                     <img class="pl-2" src="img/icons8-instagram-51.png" alt="">
                 </div>
             </div>
-            <div class="col-4 mt-3">
+            <div class="col-md-4 mt-3">
                 <h3 class="text-light">Infromation</h3>
                 <h4 class="mt-4">Online Enquiry</h4>
                 <h4 class="mt-4">General Enquiries</h4>
@@ -180,7 +190,7 @@
                 <h4 class="mt-4">Refund Policy</h4>
                 <h4 class="mt-4">Call Us</h4>
             </div>
-            <div class="col-4 mt-3 ">
+            <div class="col-md-4 mt-3 ">
                 <h3 class="text-light">Have a Questions?</h3>
                 <h4 class=" mt-4 "> <img src="img/icons8-location-24.png" alt=""> st. #5 iqbal road
                     Abbottabad, Pakistan</h4>
